calendar_incs +=  include_directories('.')

sources += files(
  'gcal-calendar.c',
  'gcal-calendar-monitor.c',
  'gcal-clock.c',
  'gcal-context.c',
  'gcal-event.c',
  'gcal-global.c',
  'gcal-log.c',
  'gcal-manager.c',
  'gcal-range.c',
  'gcal-range-tree.c',
  'gcal-recurrence.c',
  'gcal-shell-search-provider.c',
  'gcal-timeline.c',
  'gcal-timeline-subscriber.c',
  'gcal-timer.c',
  'gcal-time-zone-monitor.c',
)
