calendar_incs +=  include_directories('.')

built_sources += gnome.compile_resources(
  'event-editor-resources',
  'event-editor.gresource.xml',
  c_name: 'event_editor',
)

sources += files(
  'gcal-alarm-row.c',
  'gcal-date-chooser.c',
  'gcal-date-chooser-day.c',
  'gcal-date-selector.c',
  'gcal-event-editor-dialog.c',
  'gcal-event-editor-section.c',
  'gcal-multi-choice.c',
  'gcal-notes-section.c',
  'gcal-reminders-section.c',
  'gcal-schedule-section.c',
  'gcal-summary-section.c',
  'gcal-time-selector.c',
)
