calendar_incs +=  include_directories('.')

built_sources += gnome.compile_resources(
  'views-resources',
  'views.gresource.xml',
  c_name: 'views',
)

sources += files(
  'gcal-month-cell.c',
  'gcal-month-popover.c',
  'gcal-month-view.c',
  'gcal-view.c',
  'gcal-week-grid.c',
  'gcal-week-header.c',
  'gcal-week-view.c',
  'gcal-year-view.c',
)
