calendar_incs +=  include_directories('.')

built_sources += gnome.compile_resources(
  'views-resources',
  'views.gresource.xml',
  c_name: 'views',
)

sources += files(
  'gcal-agenda-view.c',
  'gcal-month-cell.c',
  'gcal-month-popover.c',
  'gcal-month-view.c',
  'gcal-month-view-row.c',
  'gcal-view.c',
  'gcal-week-grid.c',
  'gcal-week-header.c',
  'gcal-week-hour-bar.c',
  'gcal-week-view.c',
  'gcal-week-view-common.c',
)
